--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <div class="card my">
     <div id="foto">
-  <img src="/img/131.png" alt="фото">
+  <img src="131.png" alt="фото">
   </div>
     <h1><u>Симонов Иван</u></h1>
     <div>
